# BagOfVisualWords

./: .gitignore  bovw.ipynb  pyproject.toml
